--- a/index.html
+++ b/index.html
@@ -840,7 +840,7 @@
         }
 
         async function loadData() {
-            const url = `https://api.thingspeak.com/channels/${CHANNEL_ID}/feeds.json?results=8000`;
+            const url = `https://api.thingspeak.com/channels/${CHANNEL_ID}/feeds.json?results=8000000`;
             document.getElementById('loading').style.display = 'block';
             document.getElementById('error').style.display = 'none';
             document.getElementById('success').style.display = 'none';
@@ -1972,4 +1972,5 @@
         }
     </script>
 </body>
+
 </html>
